--- a/viz.yaml
+++ b/viz.yaml
@@ -284,6 +284,7 @@ publish:
         "js/circles.js", "js/mobile_ui.js", "js/modernizr_custom.js", "js/lazy_loading.js", 
         "js/national_pie.js", "js/rank_states_utils.js", "js/scroll_tracking.js", "js/build_map_utils.js"
       ]
+      troubleshoot: FALSE
     publisher: combine_minify_js
     scripts: [scripts/publish/combine_minify_js.R]
   -
