move social icons back

--- a/viz.yaml
+++ b/viz.yaml
@@ -262,7 +262,7 @@ publish:
       wu_state_data_json: wu_state_data_json
     context:
       resources: ["all_js_minified", "all_css", "vizlab-favicon"]
-      sections: ["mobile_map_ui", "map_section", "wu_story", "social"] # adding header and footer here, doubled each on the page
+      sections: ["social", "mobile_map_ui", "map_section", "wu_story"] # adding header and footer here, doubled each on the page
       thumbnails: 
         twitter: thumb_twitter
         facebook: thumb_facebook
